CSS: Added Nav bar, fixed alignment bug
Changed colors around to make cite look better, fixed up some code so that the homepage style works with style.css. Cleaned up unused css animations. Rows and columns class now work property. Added animation to buy button. Added border and background colors to items. Duplicated items to show that more or less than 3 items are able to be added.

--- a/php files/style.css
+++ b/php files/style.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+*{
+  box-sizing: border-box;
+}
 .login-page {
   width: 360px;
   padding: 8% 0 0;
@@ -91,9 +94,123 @@
 body {
   background: #76b852; /* fallback for old browsers */
   background: rgb(141,194,111);
-  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
+  background: linear-gradient(90deg, rgb(142, 194, 112) 0%, #76b852 50%);
+  background: #FAF9F6;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale; 
 }
+.loginBackground {
+  background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
+}
+.signUpPageBackGround {
+  background-image: linear-gradient( 90deg, rgba(156,252,248,1) 11.2%, rgba(110,123,251,1) 91.1% );
 
+}
+.column {
+  height:auto;
+  margin: 0px 25px;
+  border: 1px solid #EEEEEE;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 20px;
+}
+.row {
+  display: flex;
+  justify-content: space-evenly;
+  align-items:center;
+  max-width:75%;
+  padding: 35px;
+  margin:auto;
+}
+.buttonUnderPic {
+  text-align: center;
+  padding: 15px;
+}
+button.SignoutButton {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  text-align: center;
+  border: 0;
+  padding: 7px 50px;
+  min-height: 36px;
+  min-width: 36px;
+  color: #ffffff;
+  background: #599c35;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 14px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px, rgba(0, 0, 0, 0.2) 0px -1px 0px 0px inset;
+}
+button.SignoutButton:hover {
+  background:#DE3700;
+  transition: all ease 0.3s;
+}
+button.buyingButton {
+  display: inline-block;
+  outline: 0px;
+  border: 0px;
+  cursor: pointer;
+  will-change: box-shadow,transform;
+  background: radial-gradient( 100% 100% at 100% 0%, #54c2e0 0%, #76b852 100% );
+  box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px rgb(58 65 111 / 50%);
+  padding: 0 32px;
+  border-radius: 12px;
+  color: #ffffff;
+  height: 30px;
+  font-size: 1rem;
+  font-weight: 500px;
+  letter-spacing:0.5px;
+  text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+  transition: box-shadow 0.15s ease,transform 0.15s ease;
+}
+button.buyingButton:hover {
+  border:2px solid #fff;
+  transition: all ease 0.05s;
+}
+ul {
+  list-style:none;
+}
+a {
+  text-decoration: none;
+}
+.navigation{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 35px;
+  max-width:1070px;
+  width: 100%;
+  margin:auto;
+}
+.menu{
+  display:flex;
+}
+.menu li a{
+  padding: 3px 10px;
+  margin: 0px 15px;
+  color: #3b3b3b;
+  font-weight: 500px;
+  letter-spacing:0.5px;
+  transition: all ease 0.3s;
+}
+.logo{
+  font-size:1.4rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #202020;
+}
+.logo span {
+  color: #DE3700
+}
+.right-nav{
+  display: grid;
+  grid-template-columns:auto auto;
+  grid-gap:25px;
+}
+.menu li a:hover, 
+.menu .active{
+    color:#DE3700;
+    transition: all ease 0.3s;
+}
